--- a/draft-ounsworth-pq-external-keys.mkd
+++ b/draft-ounsworth-pq-external-keys.mkd
@@ -8,7 +8,6 @@ docname: draft-ounsworth-pq-external-pubkeys-00
 # <!-- date: 2012 -->
 
 # <!-- stand_alone: true -->
-<!-- ipr: trust200902 -->
 area: Security
 wg: LAMPS
 kw: Internet-Draft
@@ -33,22 +32,23 @@ author:
       email: mike.ounsworth@entrust.com
 
     -
-      ins: Markku-Juhani O. Saarinen 
+      name: Markku-Juhani O. Saarinen 
+      org: PQShield
       email: mjos@pqshield.com
 
 normative:
   RFC5280:
+  RFC8411:
 
 # <!-- EDNOTE: full syntax for this defined here: https://github.com/cabo/kramdown-rfc2629 -->
 
 informative:
-  I-D.draft-pala-composite-crypto-00:
 
 updates:
   RFC5280:
   
 --- abstract
-Many of the post quantum cryptographic algorithms have either large public keys or signatures. In the interest of reducing bandwidth of transitting X.509 certificates, this document provides a mechanism for referencing external public key and signature data by hash, URL, etc.
+Many of the post quantum cryptographic algorithms have either large public keys or signatures. In the interest of reducing bandwidth of transitting X.509 certificates, this document defines new public key and signature algorithms for referencing external public key and signature data by hash, URL, etc. This mechanism is designed to mimic the behaviour of an Authority Information Access extension.  
 
 <!-- End of Abstract -->
 
@@ -56,6 +56,41 @@ Many of the post quantum cryptographic algorithms have either large public keys 
 --- middle
 
 # Introduction {#sec-intro}
+
+
+# External Value {#sec-pub}
+
+The id-external-value algorithm identifier is used for identifying a public key or signature which is provided as a reference to external data.
+
+~~~
+id-external-value ::= < OID >
+~~~
+
+The corresponding subjectPublicKey is the DER encoding of the following structure:
+
+~~~
+ExternalValue ::= SEQUENCE {
+  location     GeneralName,
+  hashAlg      AlgorithmIdentifier,
+  hashVal      BIT STRING
+}
+~~~
+
+
+Upon retrieval of the referenced data, the hash of the OCTET STRING of the retrieved data (removing base64 encoding if necessary) MUST be verified using hashAlg to match the ExternalPublicKey.hash value.
+
+## External Public Key
+
+When used with a public key, algorithm parameters for id-external-value are absent.
+
+When ExternalValue is placed into a SubjectPublicKeyInfo.subjectPublicKey, the ExternalValue.location MUST refer to a DER-encoded SubjectPublicKeyInfo, which MAY be base64 encoded for easier transport over text protocols.
+
+## External Signature
+
+When used with a signatureAlgorithm, algorithm parameters are to contain the AlgorithmIdentifier of the signature that is being externalized.
+
+When ExternalValue is placed into a signatureValue, the location MUST refer to the BIT STRING of a signatureValue, which MAY be base64 encoded for easier transport over text protocols.
+
 
 
 
@@ -71,6 +106,14 @@ The ASN.1 module OID is TBD.  The id-alg-composite OID is to be assigned by IANA
 
 # Security Considerations
 
+## CSRs and CT logs
+
+In practice, situations will arise where the ExternalPublicKey.location refers to a location which is not publicly available either because it is in a local keystore, on a private network, or no longer being hosted.
+
+Not having the public key in a certificate signing request (CSR) could make it substantially harder for CAs to perform vetting of the key, for example for cryptographic strength or checking for prior revocation due to key compromise. A certificate requester MUST make the full public key available to the CA at the time of certificate request either by ensuring that the link in the ExternalPublicKey.location is visible to the CA, or by supplying the full public key to the CA out of band.
+
+
+Not having the public key in Certificate Transparency (CT) logs could make it substantially harder for researchers to perform auditing tasks on CT logs. This may require additional CT mechanisms.
 
 <!-- End of Security Considerations section -->
 
